-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.14
-
Component/s: None
-
Labels:
Recently we added an option during 2nd stage to choose whether ros is installed as Workstation or as server. Previously "Server" was default. Now default is "workstation", which introduces bugs
Reporting against 0.4.14-RC-6-gc3c6958.
When we installed as Server, then Ros can install "Microsoft Visual Studio 2010 Ultimate" successfully
Contrary when we install as Workstation, it complains about the system missing XP SP3.
(unconfirmed, but according to hbelusca, since when configured as workstation we do report NT5.1 to user mode applications, but not for the kernel, making this setting a bit "problematic")
0.4.14-RC-6-gc3c6958_VS2010setupFailsWhenConfiguredAsWorkstation.png
I already tried: changing
- SYSTEM\CurrentControlSet\Control\ReactOS\Settings\Version\ReportAsWorkstation to "0" does not fix the issue for VS2010
- Doing the above change and rebooting also does not fix the problem for VS2010
- for VS2010 setup no shims can be used to fake XPSP3, as the installer detects that shims are in use and aborts then
2 Request therefore:
- Make "Server" the default again during 2nd stage setup, as that exposes an actually existing product from MS (2k3sp2)
- when configured as workstation, we should additionally report to have SP3 installed to make the VS2010 also work in that configuration. (to be a bit more consistent here in this experimental mode. Or at least find out why the VS does suddenly think we were XP instead of NT5.2)
- blocks
-
CORE-13795 Blank "My Documents" folder
-
- Resolved
-
- is blocked by
-
CORE-17069 ProductOptions registry is broken
-
- Resolved
-
- relates to
-
CORE-16963 Partial failure while installing and testing Visual Studio 2010 Ultimate in ReactOS
-
- Resolved
-