dll/win32/syssetup/resource.h
@@ -91,8 +91,6 @@
 #define IDD_PRODUCT                2400
 #define IDC_PRODUCT_ICON           2401
 #define IDC_PRODUCT_OPTIONS        2402
-#define IDC_PRODUCT_SUITE          2403
-#define IDC_PRODUCT_TYPE           2404
 #define IDC_PRODUCT_DESCRIPTION    2405
 
 #define IDS_ACKTITLE    3010
@@ -159,5 +157,6 @@
 #define IDS_PRODUCTWORKSTATIONNAME  3903
 #define IDS_PRODUCTSERVERINFO       3904
 #define IDS_PRODUCTWORKSTATIONINFO  3905
+#define IDS_DEFAULT                 3906
 
 #define IDR_GPL 4000
